compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADDRESS
    ELSE
    IF
    RESOURCE_TYPE
    THEN

Grammar

Rule 0     S' -> statement
Rule 1     statement -> ID ASSIGN value
Rule 2     statement -> instruction
Rule 3     value -> NUMBER
Rule 4     value -> FLOAT
Rule 5     value -> DATE
Rule 6     value -> HOUR
Rule 7     value -> WEEKDAY
Rule 8     value -> DISHTYPE
Rule 9     value -> SENSORTYPE
Rule 10    value -> ID
Rule 11    number_or_var -> NUMBER
Rule 12    number_or_var -> ID
Rule 13    float_or_var -> FLOAT
Rule 14    float_or_var -> NUMBER
Rule 15    float_or_var -> ID
Rule 16    date_or_var -> DATE
Rule 17    date_or_var -> ID
Rule 18    hour_or_var -> HOUR
Rule 19    hour_or_var -> ID
Rule 20    dishtype_or_var -> DISHTYPE
Rule 21    dishtype_or_var -> ID
Rule 22    sensortype_or_var -> SENSORTYPE
Rule 23    sensortype_or_var -> ID
Rule 24    instruction -> RENT EQUIPMENT COLON number_or_var COMMA hour_or_var COMMA hour_or_var COMMA date_or_var
Rule 25    instruction -> CANCEL EQUIPMENT COLON number_or_var
Rule 26    instruction -> BUY MEAL COLON dishtype_or_var COMMA date_or_var
Rule 27    instruction -> CANCEL MEAL COLON number_or_var
Rule 28    instruction -> REGISTER USER COLON STRING COMMA STRING COMMA NIF COMMA EMAIL COMMA ID COMMA PASSWORD COMMA USERTYPE
Rule 29    instruction -> REGISTER EQUIPMENT COLON ID COMMA number_or_var COMMA number_or_var COMMA number_or_var COMMA number_or_var
Rule 30    instruction -> REGISTER EQUIPMENT COLON HCID
Rule 31    instruction -> GET RESOURCES
Rule 32    instruction -> REGISTER EQUIPMENT COLON sensortype_or_var COMMA number_or_var COMMA float_or_var
Rule 33    action -> RENT
Rule 34    action -> BUY
Rule 35    action -> REGISTER
Rule 36    action -> CANCEL

Terminals, with rules where they appear

ADDRESS              : 
ASSIGN               : 1
BUY                  : 26 34
CANCEL               : 25 27 36
COLON                : 24 25 26 27 28 29 30 32
COMMA                : 24 24 24 26 28 28 28 28 28 28 29 29 29 29 32 32
DATE                 : 5 16
DISHTYPE             : 8 20
ELSE                 : 
EMAIL                : 28
EQUIPMENT            : 24 25 29 30 32
FLOAT                : 4 13
GET                  : 31
HCID                 : 30
HOUR                 : 6 18
ID                   : 1 10 12 15 17 19 21 23 28 29
IF                   : 
MEAL                 : 26 27
NIF                  : 28
NUMBER               : 3 11 14
PASSWORD             : 28
REGISTER             : 28 29 30 32 35
RENT                 : 24 33
RESOURCES            : 31
RESOURCE_TYPE        : 
SENSORTYPE           : 9 22
STRING               : 28 28
THEN                 : 
USER                 : 28
USERTYPE             : 28
WEEKDAY              : 7
error                : 

Nonterminals, with rules where they appear

action               : 
date_or_var          : 24 26
dishtype_or_var      : 26
float_or_var         : 32
hour_or_var          : 24 24
instruction          : 2
number_or_var        : 24 25 27 29 29 29 29 32
sensortype_or_var    : 32
statement            : 0
value                : 1

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . ID ASSIGN value
    (2) statement -> . instruction
    (24) instruction -> . RENT EQUIPMENT COLON number_or_var COMMA hour_or_var COMMA hour_or_var COMMA date_or_var
    (25) instruction -> . CANCEL EQUIPMENT COLON number_or_var
    (26) instruction -> . BUY MEAL COLON dishtype_or_var COMMA date_or_var
    (27) instruction -> . CANCEL MEAL COLON number_or_var
    (28) instruction -> . REGISTER USER COLON STRING COMMA STRING COMMA NIF COMMA EMAIL COMMA ID COMMA PASSWORD COMMA USERTYPE
    (29) instruction -> . REGISTER EQUIPMENT COLON ID COMMA number_or_var COMMA number_or_var COMMA number_or_var COMMA number_or_var
    (30) instruction -> . REGISTER EQUIPMENT COLON HCID
    (31) instruction -> . GET RESOURCES
    (32) instruction -> . REGISTER EQUIPMENT COLON sensortype_or_var COMMA number_or_var COMMA float_or_var

    ID              shift and go to state 2
    RENT            shift and go to state 4
    CANCEL          shift and go to state 5
    BUY             shift and go to state 6
    REGISTER        shift and go to state 7
    GET             shift and go to state 8

    statement                      shift and go to state 1
    instruction                    shift and go to state 3

state 1

    (0) S' -> statement .



state 2

    (1) statement -> ID . ASSIGN value

    ASSIGN          shift and go to state 9


state 3

    (2) statement -> instruction .

    $end            reduce using rule 2 (statement -> instruction .)


state 4

    (24) instruction -> RENT . EQUIPMENT COLON number_or_var COMMA hour_or_var COMMA hour_or_var COMMA date_or_var

    EQUIPMENT       shift and go to state 10


state 5

    (25) instruction -> CANCEL . EQUIPMENT COLON number_or_var
    (27) instruction -> CANCEL . MEAL COLON number_or_var

    EQUIPMENT       shift and go to state 11
    MEAL            shift and go to state 12


state 6

    (26) instruction -> BUY . MEAL COLON dishtype_or_var COMMA date_or_var

    MEAL            shift and go to state 13


state 7

    (28) instruction -> REGISTER . USER COLON STRING COMMA STRING COMMA NIF COMMA EMAIL COMMA ID COMMA PASSWORD COMMA USERTYPE
    (29) instruction -> REGISTER . EQUIPMENT COLON ID COMMA number_or_var COMMA number_or_var COMMA number_or_var COMMA number_or_var
    (30) instruction -> REGISTER . EQUIPMENT COLON HCID
    (32) instruction -> REGISTER . EQUIPMENT COLON sensortype_or_var COMMA number_or_var COMMA float_or_var

    USER            shift and go to state 14
    EQUIPMENT       shift and go to state 15


state 8

    (31) instruction -> GET . RESOURCES

    RESOURCES       shift and go to state 16


state 9

    (1) statement -> ID ASSIGN . value
    (3) value -> . NUMBER
    (4) value -> . FLOAT
    (5) value -> . DATE
    (6) value -> . HOUR
    (7) value -> . WEEKDAY
    (8) value -> . DISHTYPE
    (9) value -> . SENSORTYPE
    (10) value -> . ID

    NUMBER          shift and go to state 19
    FLOAT           shift and go to state 20
    DATE            shift and go to state 21
    HOUR            shift and go to state 22
    WEEKDAY         shift and go to state 23
    DISHTYPE        shift and go to state 24
    SENSORTYPE      shift and go to state 25
    ID              shift and go to state 17

    value                          shift and go to state 18

state 10

    (24) instruction -> RENT EQUIPMENT . COLON number_or_var COMMA hour_or_var COMMA hour_or_var COMMA date_or_var

    COLON           shift and go to state 26


state 11

    (25) instruction -> CANCEL EQUIPMENT . COLON number_or_var

    COLON           shift and go to state 27


state 12

    (27) instruction -> CANCEL MEAL . COLON number_or_var

    COLON           shift and go to state 28


state 13

    (26) instruction -> BUY MEAL . COLON dishtype_or_var COMMA date_or_var

    COLON           shift and go to state 29


state 14

    (28) instruction -> REGISTER USER . COLON STRING COMMA STRING COMMA NIF COMMA EMAIL COMMA ID COMMA PASSWORD COMMA USERTYPE

    COLON           shift and go to state 30


state 15

    (29) instruction -> REGISTER EQUIPMENT . COLON ID COMMA number_or_var COMMA number_or_var COMMA number_or_var COMMA number_or_var
    (30) instruction -> REGISTER EQUIPMENT . COLON HCID
    (32) instruction -> REGISTER EQUIPMENT . COLON sensortype_or_var COMMA number_or_var COMMA float_or_var

    COLON           shift and go to state 31


state 16

    (31) instruction -> GET RESOURCES .

    $end            reduce using rule 31 (instruction -> GET RESOURCES .)


state 17

    (10) value -> ID .

    $end            reduce using rule 10 (value -> ID .)


state 18

    (1) statement -> ID ASSIGN value .

    $end            reduce using rule 1 (statement -> ID ASSIGN value .)


state 19

    (3) value -> NUMBER .

    $end            reduce using rule 3 (value -> NUMBER .)


state 20

    (4) value -> FLOAT .

    $end            reduce using rule 4 (value -> FLOAT .)


state 21

    (5) value -> DATE .

    $end            reduce using rule 5 (value -> DATE .)


state 22

    (6) value -> HOUR .

    $end            reduce using rule 6 (value -> HOUR .)


state 23

    (7) value -> WEEKDAY .

    $end            reduce using rule 7 (value -> WEEKDAY .)


state 24

    (8) value -> DISHTYPE .

    $end            reduce using rule 8 (value -> DISHTYPE .)


state 25

    (9) value -> SENSORTYPE .

    $end            reduce using rule 9 (value -> SENSORTYPE .)


state 26

    (24) instruction -> RENT EQUIPMENT COLON . number_or_var COMMA hour_or_var COMMA hour_or_var COMMA date_or_var
    (11) number_or_var -> . NUMBER
    (12) number_or_var -> . ID

    NUMBER          shift and go to state 33
    ID              shift and go to state 34

    number_or_var                  shift and go to state 32

state 27

    (25) instruction -> CANCEL EQUIPMENT COLON . number_or_var
    (11) number_or_var -> . NUMBER
    (12) number_or_var -> . ID

    NUMBER          shift and go to state 33
    ID              shift and go to state 34

    number_or_var                  shift and go to state 35

state 28

    (27) instruction -> CANCEL MEAL COLON . number_or_var
    (11) number_or_var -> . NUMBER
    (12) number_or_var -> . ID

    NUMBER          shift and go to state 33
    ID              shift and go to state 34

    number_or_var                  shift and go to state 36

state 29

    (26) instruction -> BUY MEAL COLON . dishtype_or_var COMMA date_or_var
    (20) dishtype_or_var -> . DISHTYPE
    (21) dishtype_or_var -> . ID

    DISHTYPE        shift and go to state 38
    ID              shift and go to state 39

    dishtype_or_var                shift and go to state 37

state 30

    (28) instruction -> REGISTER USER COLON . STRING COMMA STRING COMMA NIF COMMA EMAIL COMMA ID COMMA PASSWORD COMMA USERTYPE

    STRING          shift and go to state 40


state 31

    (29) instruction -> REGISTER EQUIPMENT COLON . ID COMMA number_or_var COMMA number_or_var COMMA number_or_var COMMA number_or_var
    (30) instruction -> REGISTER EQUIPMENT COLON . HCID
    (32) instruction -> REGISTER EQUIPMENT COLON . sensortype_or_var COMMA number_or_var COMMA float_or_var
    (22) sensortype_or_var -> . SENSORTYPE
    (23) sensortype_or_var -> . ID

    ID              shift and go to state 41
    HCID            shift and go to state 42
    SENSORTYPE      shift and go to state 44

    sensortype_or_var              shift and go to state 43

state 32

    (24) instruction -> RENT EQUIPMENT COLON number_or_var . COMMA hour_or_var COMMA hour_or_var COMMA date_or_var

    COMMA           shift and go to state 45


state 33

    (11) number_or_var -> NUMBER .

    COMMA           reduce using rule 11 (number_or_var -> NUMBER .)
    $end            reduce using rule 11 (number_or_var -> NUMBER .)


state 34

    (12) number_or_var -> ID .

    COMMA           reduce using rule 12 (number_or_var -> ID .)
    $end            reduce using rule 12 (number_or_var -> ID .)


state 35

    (25) instruction -> CANCEL EQUIPMENT COLON number_or_var .

    $end            reduce using rule 25 (instruction -> CANCEL EQUIPMENT COLON number_or_var .)


state 36

    (27) instruction -> CANCEL MEAL COLON number_or_var .

    $end            reduce using rule 27 (instruction -> CANCEL MEAL COLON number_or_var .)


state 37

    (26) instruction -> BUY MEAL COLON dishtype_or_var . COMMA date_or_var

    COMMA           shift and go to state 46


state 38

    (20) dishtype_or_var -> DISHTYPE .

    COMMA           reduce using rule 20 (dishtype_or_var -> DISHTYPE .)


state 39

    (21) dishtype_or_var -> ID .

    COMMA           reduce using rule 21 (dishtype_or_var -> ID .)


state 40

    (28) instruction -> REGISTER USER COLON STRING . COMMA STRING COMMA NIF COMMA EMAIL COMMA ID COMMA PASSWORD COMMA USERTYPE

    COMMA           shift and go to state 47


state 41

    (29) instruction -> REGISTER EQUIPMENT COLON ID . COMMA number_or_var COMMA number_or_var COMMA number_or_var COMMA number_or_var
    (23) sensortype_or_var -> ID .

  ! shift/reduce conflict for COMMA resolved as shift
    COMMA           shift and go to state 48

  ! COMMA           [ reduce using rule 23 (sensortype_or_var -> ID .) ]


state 42

    (30) instruction -> REGISTER EQUIPMENT COLON HCID .

    $end            reduce using rule 30 (instruction -> REGISTER EQUIPMENT COLON HCID .)


state 43

    (32) instruction -> REGISTER EQUIPMENT COLON sensortype_or_var . COMMA number_or_var COMMA float_or_var

    COMMA           shift and go to state 49


state 44

    (22) sensortype_or_var -> SENSORTYPE .

    COMMA           reduce using rule 22 (sensortype_or_var -> SENSORTYPE .)


state 45

    (24) instruction -> RENT EQUIPMENT COLON number_or_var COMMA . hour_or_var COMMA hour_or_var COMMA date_or_var
    (18) hour_or_var -> . HOUR
    (19) hour_or_var -> . ID

    HOUR            shift and go to state 51
    ID              shift and go to state 52

    hour_or_var                    shift and go to state 50

state 46

    (26) instruction -> BUY MEAL COLON dishtype_or_var COMMA . date_or_var
    (16) date_or_var -> . DATE
    (17) date_or_var -> . ID

    DATE            shift and go to state 54
    ID              shift and go to state 55

    date_or_var                    shift and go to state 53

state 47

    (28) instruction -> REGISTER USER COLON STRING COMMA . STRING COMMA NIF COMMA EMAIL COMMA ID COMMA PASSWORD COMMA USERTYPE

    STRING          shift and go to state 56


state 48

    (29) instruction -> REGISTER EQUIPMENT COLON ID COMMA . number_or_var COMMA number_or_var COMMA number_or_var COMMA number_or_var
    (11) number_or_var -> . NUMBER
    (12) number_or_var -> . ID

    NUMBER          shift and go to state 33
    ID              shift and go to state 34

    number_or_var                  shift and go to state 57

state 49

    (32) instruction -> REGISTER EQUIPMENT COLON sensortype_or_var COMMA . number_or_var COMMA float_or_var
    (11) number_or_var -> . NUMBER
    (12) number_or_var -> . ID

    NUMBER          shift and go to state 33
    ID              shift and go to state 34

    number_or_var                  shift and go to state 58

state 50

    (24) instruction -> RENT EQUIPMENT COLON number_or_var COMMA hour_or_var . COMMA hour_or_var COMMA date_or_var

    COMMA           shift and go to state 59


state 51

    (18) hour_or_var -> HOUR .

    COMMA           reduce using rule 18 (hour_or_var -> HOUR .)


state 52

    (19) hour_or_var -> ID .

    COMMA           reduce using rule 19 (hour_or_var -> ID .)


state 53

    (26) instruction -> BUY MEAL COLON dishtype_or_var COMMA date_or_var .

    $end            reduce using rule 26 (instruction -> BUY MEAL COLON dishtype_or_var COMMA date_or_var .)


state 54

    (16) date_or_var -> DATE .

    $end            reduce using rule 16 (date_or_var -> DATE .)


state 55

    (17) date_or_var -> ID .

    $end            reduce using rule 17 (date_or_var -> ID .)


state 56

    (28) instruction -> REGISTER USER COLON STRING COMMA STRING . COMMA NIF COMMA EMAIL COMMA ID COMMA PASSWORD COMMA USERTYPE

    COMMA           shift and go to state 60


state 57

    (29) instruction -> REGISTER EQUIPMENT COLON ID COMMA number_or_var . COMMA number_or_var COMMA number_or_var COMMA number_or_var

    COMMA           shift and go to state 61


state 58

    (32) instruction -> REGISTER EQUIPMENT COLON sensortype_or_var COMMA number_or_var . COMMA float_or_var

    COMMA           shift and go to state 62


state 59

    (24) instruction -> RENT EQUIPMENT COLON number_or_var COMMA hour_or_var COMMA . hour_or_var COMMA date_or_var
    (18) hour_or_var -> . HOUR
    (19) hour_or_var -> . ID

    HOUR            shift and go to state 51
    ID              shift and go to state 52

    hour_or_var                    shift and go to state 63

state 60

    (28) instruction -> REGISTER USER COLON STRING COMMA STRING COMMA . NIF COMMA EMAIL COMMA ID COMMA PASSWORD COMMA USERTYPE

    NIF             shift and go to state 64


state 61

    (29) instruction -> REGISTER EQUIPMENT COLON ID COMMA number_or_var COMMA . number_or_var COMMA number_or_var COMMA number_or_var
    (11) number_or_var -> . NUMBER
    (12) number_or_var -> . ID

    NUMBER          shift and go to state 33
    ID              shift and go to state 34

    number_or_var                  shift and go to state 65

state 62

    (32) instruction -> REGISTER EQUIPMENT COLON sensortype_or_var COMMA number_or_var COMMA . float_or_var
    (13) float_or_var -> . FLOAT
    (14) float_or_var -> . NUMBER
    (15) float_or_var -> . ID

    FLOAT           shift and go to state 67
    NUMBER          shift and go to state 68
    ID              shift and go to state 69

    float_or_var                   shift and go to state 66

state 63

    (24) instruction -> RENT EQUIPMENT COLON number_or_var COMMA hour_or_var COMMA hour_or_var . COMMA date_or_var

    COMMA           shift and go to state 70


state 64

    (28) instruction -> REGISTER USER COLON STRING COMMA STRING COMMA NIF . COMMA EMAIL COMMA ID COMMA PASSWORD COMMA USERTYPE

    COMMA           shift and go to state 71


state 65

    (29) instruction -> REGISTER EQUIPMENT COLON ID COMMA number_or_var COMMA number_or_var . COMMA number_or_var COMMA number_or_var

    COMMA           shift and go to state 72


state 66

    (32) instruction -> REGISTER EQUIPMENT COLON sensortype_or_var COMMA number_or_var COMMA float_or_var .

    $end            reduce using rule 32 (instruction -> REGISTER EQUIPMENT COLON sensortype_or_var COMMA number_or_var COMMA float_or_var .)


state 67

    (13) float_or_var -> FLOAT .

    $end            reduce using rule 13 (float_or_var -> FLOAT .)


state 68

    (14) float_or_var -> NUMBER .

    $end            reduce using rule 14 (float_or_var -> NUMBER .)


state 69

    (15) float_or_var -> ID .

    $end            reduce using rule 15 (float_or_var -> ID .)


state 70

    (24) instruction -> RENT EQUIPMENT COLON number_or_var COMMA hour_or_var COMMA hour_or_var COMMA . date_or_var
    (16) date_or_var -> . DATE
    (17) date_or_var -> . ID

    DATE            shift and go to state 54
    ID              shift and go to state 55

    date_or_var                    shift and go to state 73

state 71

    (28) instruction -> REGISTER USER COLON STRING COMMA STRING COMMA NIF COMMA . EMAIL COMMA ID COMMA PASSWORD COMMA USERTYPE

    EMAIL           shift and go to state 74


state 72

    (29) instruction -> REGISTER EQUIPMENT COLON ID COMMA number_or_var COMMA number_or_var COMMA . number_or_var COMMA number_or_var
    (11) number_or_var -> . NUMBER
    (12) number_or_var -> . ID

    NUMBER          shift and go to state 33
    ID              shift and go to state 34

    number_or_var                  shift and go to state 75

state 73

    (24) instruction -> RENT EQUIPMENT COLON number_or_var COMMA hour_or_var COMMA hour_or_var COMMA date_or_var .

    $end            reduce using rule 24 (instruction -> RENT EQUIPMENT COLON number_or_var COMMA hour_or_var COMMA hour_or_var COMMA date_or_var .)


state 74

    (28) instruction -> REGISTER USER COLON STRING COMMA STRING COMMA NIF COMMA EMAIL . COMMA ID COMMA PASSWORD COMMA USERTYPE

    COMMA           shift and go to state 76


state 75

    (29) instruction -> REGISTER EQUIPMENT COLON ID COMMA number_or_var COMMA number_or_var COMMA number_or_var . COMMA number_or_var

    COMMA           shift and go to state 77


state 76

    (28) instruction -> REGISTER USER COLON STRING COMMA STRING COMMA NIF COMMA EMAIL COMMA . ID COMMA PASSWORD COMMA USERTYPE

    ID              shift and go to state 78


state 77

    (29) instruction -> REGISTER EQUIPMENT COLON ID COMMA number_or_var COMMA number_or_var COMMA number_or_var COMMA . number_or_var
    (11) number_or_var -> . NUMBER
    (12) number_or_var -> . ID

    NUMBER          shift and go to state 33
    ID              shift and go to state 34

    number_or_var                  shift and go to state 79

state 78

    (28) instruction -> REGISTER USER COLON STRING COMMA STRING COMMA NIF COMMA EMAIL COMMA ID . COMMA PASSWORD COMMA USERTYPE

    COMMA           shift and go to state 80


state 79

    (29) instruction -> REGISTER EQUIPMENT COLON ID COMMA number_or_var COMMA number_or_var COMMA number_or_var COMMA number_or_var .

    $end            reduce using rule 29 (instruction -> REGISTER EQUIPMENT COLON ID COMMA number_or_var COMMA number_or_var COMMA number_or_var COMMA number_or_var .)


state 80

    (28) instruction -> REGISTER USER COLON STRING COMMA STRING COMMA NIF COMMA EMAIL COMMA ID COMMA . PASSWORD COMMA USERTYPE

    PASSWORD        shift and go to state 81


state 81

    (28) instruction -> REGISTER USER COLON STRING COMMA STRING COMMA NIF COMMA EMAIL COMMA ID COMMA PASSWORD . COMMA USERTYPE

    COMMA           shift and go to state 82


state 82

    (28) instruction -> REGISTER USER COLON STRING COMMA STRING COMMA NIF COMMA EMAIL COMMA ID COMMA PASSWORD COMMA . USERTYPE

    USERTYPE        shift and go to state 83


state 83

    (28) instruction -> REGISTER USER COLON STRING COMMA STRING COMMA NIF COMMA EMAIL COMMA ID COMMA PASSWORD COMMA USERTYPE .

    $end            reduce using rule 28 (instruction -> REGISTER USER COLON STRING COMMA STRING COMMA NIF COMMA EMAIL COMMA ID COMMA PASSWORD COMMA USERTYPE .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for COMMA in state 41 resolved as shift
